--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,15 @@
 <mat-drawer-container class="max-drawer-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
-    <p>Auto-resizing sidenav</p>
+  <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
+    <div class="logo-container">
+      <p>Platz für Logo</p>
+    </div>
   </mat-drawer>
+
   <div class="example-sidenav-content">
-    <mat-toolbar color="secondary">
+    <mat-toolbar>
       <mat-toolbar-row>
         <button mat-icon-button class="example-icon" (click)="drawer.toggle()">
-          <mat-icon color="secondary">menu</mat-icon>
+          <mat-icon class="menu-icon">menu</mat-icon>
         </button>
         <span> Simple CRM </span>
       </mat-toolbar-row>
