--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,10 @@
     <div class="logo-container">
       <p>Platz für Logo</p>
     </div>
+    <ul class="menu-items">
+      <li routerLink="/dashboard"><mat-icon>fact_check</mat-icon>Dashboard</li>
+      <li routerLink="/user"><mat-icon>perm_identity</mat-icon>User</li>
+    </ul>
   </mat-drawer>
 
   <div class="example-sidenav-content">
@@ -14,5 +18,8 @@
         <span> Simple CRM </span>
       </mat-toolbar-row>
     </mat-toolbar>
+    <div class="router-container">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </mat-drawer-container>
