--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,14 +14,38 @@
 }
 .sidenav {
   width: 200px;
-  padding: 20px;
-  text-align: center;
   background-color: #058686;
 }
 .logo-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-bottom: 1px solid white;
+  padding: 16px;
+  min-height: 30px;
 }
 .menu-icon {
   cursor: pointer;
   color: white;
+}
+.menu-items {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  li {
+    padding-left: 16px;
+    padding-right: 16px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    cursor: pointer;
+    &:hover {
+      background-color: #004f4fa6;
+    }
+  }
+}
+.router-container {
+  padding-left: 56px;
+  padding-top: 16px;
 }
