--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,12 @@
 <p>user works!</p>
+
+<button
+  (click)="openDialog()"
+  class="add-user-btn"
+  mat-fab
+  matTooltip="Add User"
+  matTooltipPosition="above"
+  matTooltipShowDelay="500"
+>
+  <mat-icon>add</mat-icon>
+</button>
