--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -5,26 +5,46 @@
     <p>Hier User Hinzufügen</p>
     <mat-form-field class="mr-16" appearance="outline" color="accent">
       <mat-label>First Name</mat-label>
-      <input matInput />
-      <mat-hint>Pleace enter you Name</mat-hint>
+      <input matInput placeholder="First Name" />
+      <!-- <mat-hint>Pleace enter you Name</mat-hint> -->
     </mat-form-field>
     <mat-form-field appearance="outline" color="accent">
       <mat-label>Last Name</mat-label>
-      <input matInput />
-      <mat-hint>Pleace enter your last Name</mat-hint>
+      <input matInput placeholder="Last Name" />
+      <!-- <mat-hint>Pleace enter your last Name</mat-hint> -->
     </mat-form-field>
   </div>
 
-  <div class="mt-16">
-    <mat-form-field class="mr-16" appearance="outline" color="accent">
-      <mat-label>Choose a date</mat-label>
-      <input matInput [matDatepicker]="picker" type="text" />
-      <mat-hint>MM/DD/YYYY</mat-hint>
+  <div>
+    <mat-form-field class="full-width" appearance="outline" color="accent">
+      <mat-label>Birth Date</mat-label>
+      <input matInput placeholder="Birth Date" [matDatepicker]="picker" />
+      <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
       <mat-datepicker-toggle
         matIconSuffix
         [for]="picker"
       ></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field class="full-width" appearance="outline" color="accent">
+      <mat-label>Street + House No.</mat-label>
+      <input matInput placeholder="Street + House No." />
+      <!-- <mat-hint>Pleace enter your Email</mat-hint> -->
+    </mat-form-field>
+  </div>
+  <div>
+    <mat-form-field class="mr-16" appearance="outline" color="accent">
+      <mat-label>Zip code</mat-label>
+      <input matInput placeholder="Zip code" />
+      <!-- <mat-hint>Pleace enter your Email</mat-hint> -->
+    </mat-form-field>
+    <mat-form-field appearance="outline" color="accent">
+      <mat-label>City</mat-label>
+      <input matInput placeholder="City" />
+      <!-- <mat-hint>Pleace enter your Email</mat-hint> -->
     </mat-form-field>
   </div>
 </mat-dialog-content>
